main Page built :)

--- a/index.html
+++ b/index.html
@@ -3,42 +3,31 @@
 <html>
 
 <head>
-    <title> ChopChop </title>
+    <title>Ivory Hacks </title>
     <base href='/'>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>
+    <!--<link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>-->
+    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui/dist/semantic.min.css">
+
     <link rel='stylesheet' href='node_modules/sidr/dist/stylesheets/jquery.sidr.dark.min.css'>
-    <link rel='stylesheet' href='node_modules/fullpage.js/jquery.fullPage.css'>
-    <link rel='stylesheet' href='src/css/bootstrap.min.css'>
+    <!--<link rel='stylesheet' href='node_modules/fullpage.js/jquery.fullPage.css'>-->
+    <link rel='stylesheet' href='src/css/index.css'>
     <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <script src='node_modules/sidr/dist/jquery.sidr.min.js'></script>
-    <script src='node_modules/fullpage.js/jquery.fullPage.js'></script>
+    <!--<script src='node_modules/fullpage.js/jquery.fullPage.js'></script>-->
 </head>
 
 <body>
-    <main-navigation></main-navigation>
-    <div id="fullpage">
-        <div class="section" id="registration">
-            <registration></registration>
-        </div>
-        <div class="section" id="about">
-            <about></about>
-        </div>
-        <div class="section" id="sponsors">
-            <sponsors></sponsors>
-        </div>
-        <div class="section" id="account">
-            <account></account>
-        </div>
-    </div>
-    </div>
-    <script src='node_modules/angular/angular.min.js'></script>
-    <script src='node_modules/angular-route/angular-route.min.js'></script>
-    <script src='node_modules/bootstrap/dist/js/bootstrap.min.js'></script>
-    <!--<script src='node_modules/'></script>-->
-    <script src='src/app.js'></script>
-    <script src='src/js/directives.js'></script>
-    <!--<script src='src/js/'></script>-->
+<main-page></main-page>
+
+<script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
+<script src='node_modules/angular/angular.min.js'></script>
+<script src='node_modules/angular-route/angular-route.min.js'></script>
+<script src='node_modules/bootstrap/dist/js/bootstrap.min.js'></script>
+<!--<script src='node_modules/'></script>-->
+<script src='src/app.js'></script>
+<script src='src/js/directives.js'></script>
+<!--<script src='src/js/'></script>-->
 </body>
 
 </html>
