--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
 <main-page></main-page>
+<about></about>
 
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 <script src='node_modules/angular/angular.min.js'></script>
