challenge template added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 <main-page></main-page>
 <about></about>
+<challenges></challenges>
 
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 <script src='node_modules/angular/angular.min.js'></script>
