added a when and where page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <main-page></main-page>
 <about></about>
 <challenges></challenges>
+<when-and-where></when-and-where>
 
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 <script src='node_modules/angular/angular.min.js'></script>
