added a schedule page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <about></about>
 <challenges></challenges>
 <when-and-where></when-and-where>
+<schedule></schedule>
 
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 <script src='node_modules/angular/angular.min.js'></script>
