--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
     <link rel='stylesheet' href='src/css/index.css'>
     <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <script src='node_modules/sidr/dist/jquery.sidr.min.js'></script>
+
     <!--<script src='node_modules/fullpage.js/jquery.fullPage.js'></script>-->
 </head>
 
 <body>
+<div class="layer1 screen"></div>
 <main-page></main-page>
 <about></about>
 <challenges></challenges>
 <when-and-where></when-and-where>
 <schedule></schedule>
 
+
+
+<script src='src/js/css-fixing.js'></script>
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 <script src='node_modules/angular/angular.min.js'></script>
 <script src='node_modules/angular-route/angular-route.min.js'></script>
