--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Ivory Hacks </title>
     <base href='/'>
     <meta name="viewport" content="width=device-width,minimum-scale=1">
-    <!--<link rel='stylesheet' href='node_modules/bootstrap/dist/css/bootstrap.min.css'>-->
     <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui/dist/semantic.min.css">
-
     <link rel='stylesheet' href='node_modules/sidr/dist/stylesheets/jquery.sidr.dark.min.css'>
     <!--<link rel='stylesheet' href='node_modules/fullpage.js/jquery.fullPage.css'>-->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='src/css/index.css'>
     <script src='node_modules/jquery/dist/jquery.min.js'></script>
     <script src='node_modules/sidr/dist/jquery.sidr.min.js'></script>
@@ -25,8 +24,8 @@
 <challenges></challenges>
 <when-and-where></when-and-where>
 <schedule></schedule>
-
-
+<faqs></faqs>
+<sponsors></sponsors>
 
 <script src='src/js/css-fixing.js'></script>
 <script src="node_modules/semantic-ui/dist/semantic.min.js"></script>
