modified backgrounds and some page layouts + README

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 <main-page></main-page>
 <about></about>
 <challenges></challenges>
-<when-and-where></when-and-where>
+<!--<when-and-where></when-and-where>-->
 <schedule></schedule>
+<sponsors></sponsors>
+<faq></faq>
 
+<map></map>
 
 
 <script src='src/js/css-fixing.js'></script>
