meta and favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <head>
     <title>Ivory Hacks </title>
     <base href='/'>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width,minimum-scale=1">
+    <meta name="description" content="Sign Up for the IvoryHacks Hackathon presented by Rose-Hulman">
+    <meta name="keywords" content="IvoryHacks, Ivory Hacks, Rose Hulman, Rose-Hulman, Hackathon, Hackers, MLH, Major League Hacking">
+    <meta name="authors" content="Rose-Hulman Hackers & Steven and Melissa">
     <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui/dist/semantic.min.css">
     <link rel='stylesheet' href='node_modules/sidr/dist/stylesheets/jquery.sidr.dark.min.css'>
     <!--<link rel='stylesheet' href='node_modules/fullpage.js/jquery.fullPage.css'>-->
